feat(plugins/integration-auth): add `integration-auth` plugin
